lab/static/css/app.css
/* ... */
.form-switch.form-switch-lg{
  height: 1.5rem;
  width: 2.75rem;
}
.form-switch.form-switch-lg::before{
  height: 1.25rem;
  width: 1.25rem;
}
.form-switch.square{
  border-radius: 0px;
}
.form-switch.square::before{
  content: var(--tw-content);
  border-radius: 0px;
}
.card-radio{
  position: relative;
}
.card-radio .form-label{
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  border-width: 1px;
  --tw-border-opacity: 1;
  border-color: rgb(229 231 235 / var(--tw-border-opacity));
}
:is([data-mode="dark"] .card-radio .form-label){
  --tw-border-opacity: 1;
  border-color: rgb(55 65 81 / var(--tw-border-opacity));
}
.card-radio .form-radio{
  display: none;
}
.card-radio .form-radio:checked + .form-label{
  --tw-border-opacity: 1;
  border-color: rgb(48 115 241 / var(--tw-border-opacity));
  --tw-text-opacity: 1;
  color: rgb(48 115 241 / var(--tw-text-opacity));
}
.btn-radio .form-radio{
  display: none;
}
.btn-radio .form-radio:checked + label{
  --tw-bg-opacity: 1;
  background-color: rgb(48 115 241 / var(--tw-bg-opacity));
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}
.sr-only{
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}
.pointer-events-none{
  pointer-events: none;
}
.collapse{
  visibility: collapse;
}
.static{
  position: static;
}
.fixed{
  position: fixed;
}
.absolute{
  position: absolute;
}
.relative{
  position: relative;
}
.inset-0{
  inset: 0px;
}
.inset-3{
  inset: 0.75rem;
}
.inset-x-0{
  left: 0px;
  right: 0px;
}
.inset-y-0{
  top: 0px;
  bottom: 0px;
}
.-start-2{
  inset-inline-start: -0.5rem;
}
.bottom-0{
  bottom: 0px;
}
.bottom-20{
  bottom: 5rem;
}
.end-0{
  inset-inline-end: 0px;
}
.end-14{
  inset-inline-end: 3.5rem;
}
.end-2{
  inset-inline-end: 0.5rem;
}
.end-4{
  inset-inline-end: 1rem;
}
.left-0{
  left: 0px;
}
.right-0{
  right: 0px;
}
.start-0{
  inset-inline-start: 0px;
}
.start-1\/2{
  inset-inline-start: 50%;
}
.start-10{
  inset-inline-start: 2.5rem;
}
.start-4{
  inset-inline-start: 1rem;
}
.top-0{
  top: 0px;
}
.top-1\/2{
  top: 50%;
}
.top-2{
  top: 0.5rem;
}
.top-3{
  top: 0.75rem;
}
.top-3\.5{
  top: 0.875rem;
}
.top-5{
  top: 1.25rem;
}
.top-7{
  top: 1.75rem;
}
.-z-10{
  z-index: -10;
}
.z-0{
  z-index: 0;
}
.z-10{
  z-index: 10;
}
.z-20{
  z-index: 20;
}
.z-40{
  z-index: 40;
}
.z-50{
  z-index: 50;
}
.order-1{
  -webkit-box-ordinal-group: 2;
      -ms-flex-order: 1;
          order: 1;
}
.order-2{
  -webkit-box-ordinal-group: 3;
      -ms-flex-order: 2;
          order: 2;
}
.col-span-1{
  grid-column: span 1 / span 1;
}
.col-span-2{
  grid-column: span 2 / span 2;
}
.col-span-3{
  grid-column: span 3 / span 3;
}
.col-span-full{
  grid-column: 1 / -1;
}
.m-0{
  margin: 0px;
}
.m-0\.5{
  margin: 0.125rem;
}
.m-1{
  margin: 0.25rem;
}
.m-1\.5{
  margin: 0.375rem;
}
.m-12{
  margin: 3rem;
}
.m-2{
  margin: 0.5rem;
}
.m-2\.5{
  margin: 0.625rem;
}
.m-3{
  margin: 0.75rem;
}
.-mx-2{
  margin-left: -0.5rem;
  margin-right: -0.5rem;
}
.mx-1{
  margin-left: 0.25rem;
  margin-right: 0.25rem;
}
.mx-1\.5{
  margin-left: 0.375rem;
  margin-right: 0.375rem;
}
.mx-2{
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}
.mx-4{
  margin-left: 1rem;
  margin-right: 1rem;
}
.mx-5{
  margin-left: 1.25rem;
  margin-right: 1.25rem;
}
.mx-auto{
  margin-left: auto;
  margin-right: auto;
}
.my-0{
  margin-top: 0px;
  margin-bottom: 0px;
}
.my-10{
  margin-top: 2.5rem;
  margin-bottom: 2.5rem;
}
.my-2{
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}
.my-2\.5{
  margin-top: 0.625rem;
  margin-bottom: 0.625rem;
}
.my-3{
  margin-top: 0.75rem;
  margin-bottom: 0.75rem;
}
.my-4{
  margin-top: 1rem;
  margin-bottom: 1rem;
}
.my-6{
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
}
.my-8{
  margin-top: 2rem;
  margin-bottom: 2rem;
}
.-mb-px{
  margin-bottom: -1px;
}
.-me-2{
  -webkit-margin-end: -0.5rem;
          margin-inline-end: -0.5rem;
}
.-me-px{
  -webkit-margin-end: -1px;
          margin-inline-end: -1px;
}
.-ms-2{
  -webkit-margin-start: -0.5rem;
          margin-inline-start: -0.5rem;
}
.-ms-8{
  -webkit-margin-start: -2rem;
          margin-inline-start: -2rem;
}
.-ms-px{
  -webkit-margin-start: -1px;
          margin-inline-start: -1px;
}
.-mt-px{
  margin-top: -1px;
}
.mb-1{
  margin-bottom: 0.25rem;
}
.mb-10{
  margin-bottom: 2.5rem;
}
.mb-2{
  margin-bottom: 0.5rem;
}
.mb-2\.5{
  margin-bottom: 0.625rem;
}
.mb-3{
  margin-bottom: 0.75rem;
}
.mb-3\.5{
  margin-bottom: 0.875rem;
}
.mb-4{
  margin-bottom: 1rem;
}
.mb-5{
  margin-bottom: 1.25rem;
}
.mb-6{
  margin-bottom: 1.5rem;
}
.mb-8{
  margin-bottom: 2rem;
}
.mb-9{
  margin-bottom: 2.25rem;
}
.me-0{
  -webkit-margin-end: 0px;
          margin-inline-end: 0px;
}
.me-0\.5{
  -webkit-margin-end: 0.125rem;
          margin-inline-end: 0.125rem;
}
.me-1{
  -webkit-margin-end: 0.25rem;
          margin-inline-end: 0.25rem;
}
.me-1\.5{
  -webkit-margin-end: 0.375rem;
          margin-inline-end: 0.375rem;
}
.me-2{
  -webkit-margin-end: 0.5rem;
          margin-inline-end: 0.5rem;
}
.me-3{
  -webkit-margin-end: 0.75rem;
          margin-inline-end: 0.75rem;
}
.me-3\.5{
  -webkit-margin-end: 0.875rem;
          margin-inline-end: 0.875rem;
}
.me-4{
  -webkit-margin-end: 1rem;
          margin-inline-end: 1rem;
}
.me-6{
  -webkit-margin-end: 1.5rem;
          margin-inline-end: 1.5rem;
}
.me-auto{
  -webkit-margin-end: auto;
          margin-inline-end: auto;
}
.ml-1{
  margin-left: 0.25rem;
}
.ml-3{
  margin-left: 1rem;
}
.mr-1{
  margin-right: 0.25rem;
}
.mr-1\.5{
  margin-right: 0.375rem;
}
.mr-2{
  margin-right: 0.5rem;
}
.ms-0{
  -webkit-margin-start: 0px;
          margin-inline-start: 0px;
}
/* ... */

